--- a/index.html
+++ b/index.html
@@ -236,6 +236,67 @@
                     <a href="#" class="started-box__link btn">contact us</a>
                 </div>
             </div>
+
+            <div class="footer-info__box">
+                <div class="d-flex footer-info-container container">
+                    <div class="site-logo-box">
+                        <img
+                            src="images/site-logo.svg"
+                            alt=""
+                            class="site-logo"
+                        />
+                        <ul class="d-flex navigation__list footer-info__list">
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">home</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">about</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-info__location">
+                        <p class="footer-info__location--description">
+                            987 Hillcrest Lane <br />
+                            Irvine, CA <br />
+                            California 92714 <br />
+                            Call Us : 949-833-7432
+                        </p>
+                    </div>
+
+                    <div class="d-flex solicial-links__box">
+                        <ul class="d-flex solicial-links__list">
+                            <li class="solicial-links__item">
+                                <a href="#" class="solicial-links__link"
+                                    ><img
+                                        src="images/facebook-img.svg"
+                                        alt=""
+                                        class="solicial-link__img"
+                                /></a>
+                            </li>
+                            <li class="solicial-links__item">
+                                <a href="#" class="solicial-links__link"
+                                    ><img
+                                        src="images/pinterest-img.svg"
+                                        alt=""
+                                        class="solicial-link__img"
+                                /></a>
+                            </li>
+                            <li class="solicial-links__item">
+                                <a href="#" class="solicial-links__link"
+                                    ><img
+                                        src="images/twitter-img.svg"
+                                        alt=""
+                                        class="solicial-link__img"
+                                /></a>
+                            </li>
+                        </ul>
+
+                        <p class="solicial-links__description">
+                            Copyright 2020. All Rights Reserved
+                        </p>
+                    </div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
