add about section

--- a/index.html
+++ b/index.html
@@ -34,11 +34,19 @@
                             <a class="navigation__link" href="#">home</a>
                         </li>
                         <li class="navigation__item">
-                            <a class="navigation__link" href="#">about</a>
+                            <a
+                                class="navigation__link"
+                                href="html-folders/about-section/about.html"
+                                >about</a
+                            >
                         </li>
                     </ul>
                     <!-- contact us -->
-                    <a href="#" class="btn header__link">contact us</a>
+                    <a
+                        href="html-folders/contact/contact.html"
+                        class="btn header__link"
+                        >contact us</a
+                    >
                 </nav>
             </div>
         </header>
@@ -233,7 +241,11 @@
                 />
                 <div class="d-flex started-box container">
                     <h2 class="started-box__title">Ready to get started?</h2>
-                    <a href="#" class="started-box__link btn">contact us</a>
+                    <a
+                        href="html-folders/contact/"
+                        class="started-box__link btn"
+                        >contact us</a
+                    >
                 </div>
             </div>
 
@@ -250,7 +262,11 @@
                                 <a class="navigation__link" href="#">home</a>
                             </li>
                             <li class="navigation__item">
-                                <a class="navigation__link" href="#">about</a>
+                                <a
+                                    class="navigation__link"
+                                    href="html-folders/about-section/about.html"
+                                    >about</a
+                                >
                             </li>
                         </ul>
                     </div>
